fix: add line break on paragraph

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 @plugin "@tailwindcss/typography";
 
@@ -23,8 +23,8 @@
     --color-lividus-900: #111e38;
 
     /* font family */
-    --font-noto-sans: "Noto Sans TC", "Roboto";
-    --font-jetbrains-mono: "JetBrains Mono", "Noto Sans TC";
+    --font-noto-sans: 'Noto Sans TC', 'Roboto';
+    --font-jetbrains-mono: 'JetBrains Mono', 'Noto Sans TC';
 
     /* animate */
     --animate-fade-in: fade-in 0.5s ease-in-out;
@@ -51,7 +51,6 @@
     }
 }
 
-
 @utility group-gradient-underline-grow {
     @apply bg-linear-to-r from-green-500 via-emerald-500 to-teal-500 dark:from-indigo-500 dark:via-violet-500 dark:to-purple-500 bg-[length:0_3px] bg-left-bottom bg-no-repeat transition-all duration-200 ease-in group-hover:bg-[length:100%_3px];
 }
@@ -62,31 +61,33 @@
 
 @utility rich-text {
     @apply prose text-lg max-w-none prose-slate dark:prose-invert leading-8
-        /*  heading  */
+    /* paragraph */
+    prose-p:break-all
+    /*  heading  */
     prose-headings:font-medium prose-headings:text-emerald-600 dark:prose-headings:text-lividus-500
     prose-h2:border-b-2 prose-h2:border-slate-300 dark:prose-h2:border-slate-500 prose-h2:my-4 prose-h2:py-4 prose-h2:border-solid
-        /* link */
+    /* link */
     prose-a:no-underline prose-a:hover:underline prose-a:text-emerald-700 prose-a:hover:text-emerald-800
     dark:prose-a:text-lividus-300 dark:prose-a:hover:text-lividus-200
-        /* list */
+    /* list */
     prose-li:marker:text-emerald-500 dark:prose-li:marker:text-lividus-400
-        /* figure */
+    /* figure */
     prose-figure:table prose-figure:w-full prose-figure:mx-auto
-        /* image */
+    /* image */
     prose-img:w-full prose-img:rounded-xl
-        /* figcaption */
+    /* figcaption */
     prose-figcaption:table-caption prose-figcaption:[caption-side:bottom] prose-figcaption:break-words
     prose-figcaption:rounded-lg prose-figcaption:p-1.5 prose-figcaption:text-center prose-figcaption:bg-slate-200
     dark:prose-figcaption:bg-slate-700 dark:prose-figcaption:text-slate-100
-        /* hr */
+    /* hr */
     prose-hr:my-3 prose-hr:h-1 prose-hr:border-none prose-hr:bg-slate-300 dark:prose-hr:bg-slate-500
-        /* code */
+    /* code */
     prose-code:before:content-none prose-code:after:content-none prose-code:font-jetbrains-mono prose-code:font-medium
-        /* pre */
+    /* pre */
     prose-pre:p-0 prose-pre:text-[#abb2bf] prose-pre:bg-neutral-800 prose-pre:rounded-xl prose-pre:text-lg dark:prose-pre:bg-neutral-900 prose-pre:border-none
-        /* blockquote before */
+    /* blockquote before */
     prose-blockquote:relative prose-blockquote:before:absolute prose-blockquote:before:w-1.5 prose-blockquote:before:h-full prose-blockquote:before:rounded-sm prose-blockquote:before:top-0 prose-blockquote:before:-left-4 prose-blockquote:before:bg-emerald-300 dark:prose-blockquote:before:bg-lividus-700 prose-blockquote:before:contain-none prose-blockquote:ml-4
-        /* blockquote */
+    /* blockquote */
     prose-blockquote:border-none prose-blockquote:rounded-xl prose-blockquote:text-emerald-500 prose-blockquote:bg-emerald-300/20 dark:prose-blockquote:text-lividus-400 dark:prose-blockquote:bg-lividus-800/50 prose-blockquote:py-2 prose-blockquote:px-4;
 
     /* ckeditor5-font/theme/fontsize.css */
